# django-blog

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
mysite/: manage.py  mysite_data.json
mysite/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
mysite/blog/templates/: pagination.html
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
mysite/blog/templatetags/: blog_tags.py
mysite/homepage/: tests.py  urls.py  views.py
mysite/homepage/templates/homepage/: homepage.html
mysite/mysite/: settings.py  urls.py
